--- a/css/style.css
+++ b/css/style.css
@@ -625,12 +625,9 @@ footer li {
 
 
 @media screen and (max-width: 767px) {
-    /*body {
-        margin: 0;
-        padding: 0 0px;
-        box-sizing: border-box;
+    body {
         width: 100%;
-    }*/
+    }
 
     nav {
         flex-direction: column;
@@ -693,37 +690,30 @@ footer li {
     }
 
     /*----------------------<section> filtres--------------*/
-
     .filtres {
-        margin-top: 30px;
-        padding: 0 20px;
+
+        flex-direction: column;
+    }
+
+    .filtres h2 {
+        margin-left: -30;
     }
 
     .filtres ul {
-        flex-wrap: wrap;
-        justify-content: center;
-        margin-bottom: 30px;
-
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, auto);
+        grid-gap: 10px;
+        margin-top: 20px;
+        margin-left: -30px;
     }
-
 
     .filtres li {
-        font-size: 95%;
-        display: initial;
-        font-size: 0.8rem;
+        width: 70%;
     }
 
-    /*.filtres li {
-        margin-right: 0px;
-        border: 1px solid rgb(196, 195, 195);
-        border-radius: 20px 20px;
-        padding: 10px 10px;
-        font-weight: bold;
-        font-size: 90%;
-    }*/
-
     main {
-        width: 110%;
+        width: 100%;
         margin-left: -19px;
         margin-right: -10px;
         padding: 0%;
@@ -735,7 +725,7 @@ footer li {
         height: 600px;
         margin-bottom: 10px;
         margin: 0;
-        width: 110%;
+        width: 100%;
         padding-left: -10px;
         border-radius: none;
         background-color: var(--grey);
@@ -743,6 +733,11 @@ footer li {
 
     .plus-populaires {
         border-radius: none;
+        width: 100%;
+    }
+
+    .plus-populaires h2 {
+        padding-left: -15px;
     }
 
     .plus-populaires ul {
@@ -750,7 +745,7 @@ footer li {
 
         flex-direction: column;
         margin-left: 15px;
-        width: 78%;
+        width: 90vw;
         /* margin-right: 30%;
         width: 85%;*/
     }
@@ -766,7 +761,7 @@ footer li {
     }
 
     .carte-populaire {
-        width: 110%;
+        width: 100%;
         height: 147px;
         margin-left: -50px;
 
@@ -779,16 +774,18 @@ footer li {
         width: 100%;
         background-color: inherit;
         border: none;
+
     }
 
 
     .hebergement h2 {
-        margin: 20px 0;
+        /* margin: 20px 0;*/
     }
 
     .hebergement ul {
         margin: 0;
         padding: 0;
+
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -796,13 +793,13 @@ footer li {
 
     .carte-hebergement {
         margin-left: 5px;
-        width: 100vw;
+        width: 93vw;
         box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.2);
     }
 
     .carte-hebergement img {
         object-fit: fill;
-        width: 100vw;
+        width: 93vw;
     }
 
     .afficher {
