--- a/css/style.css
+++ b/css/style.css
@@ -626,7 +626,8 @@ footer li {
 
 @media screen and (max-width: 767px) {
     body {
-        width: 100%;
+        width: auto;
+        height: auto;
     }
 
     nav {
@@ -720,6 +721,8 @@ footer li {
         padding-left: 5px;
     }
 
+
+    /*----------------------main------------------*/
     main {
         width: 100%;
         margin-left: -19px;
@@ -729,19 +732,26 @@ footer li {
         flex-direction: column-reverse;
     }
 
+    /*-----------------------------Le plus populaires-------------------*/
     article {
         height: 600px;
         margin-bottom: 10px;
         margin: 0;
+        width: unset;
         width: 100%;
         padding-left: -10px;
+        padding-right: 50px;
+        padding-bottom: 10px;
         border-radius: none;
         background-color: var(--grey);
+
     }
 
     .plus-populaires {
         border-radius: none;
         width: 100%;
+        background-color: #D9D9D9;
+
     }
 
     .plus-populaires h2 {
@@ -750,10 +760,10 @@ footer li {
 
     .plus-populaires ul {
         display: flex;
-
         flex-direction: column;
-        margin-left: 15px;
-        width: 90vw;
+        margin-left: 20px;
+        margin-right: 10px;
+        width: 95vw;
         /* margin-right: 30%;
         width: 85%;*/
     }
@@ -776,7 +786,7 @@ footer li {
     }
 
 
-    /*----------------------------hebergement-----------------------------------*/
+    /*----------------------------hebergements-----------------------------------*/
 
     .hebergement {
         width: 100%;
@@ -797,6 +807,7 @@ footer li {
         display: flex;
         align-items: center;
         flex-direction: column;
+
     }
 
     .carte-hebergement {
@@ -813,6 +824,8 @@ footer li {
         /*height:90vw*/
         height: 200px;
     }
+
+    .hebergement li {}
 
     .description-carte {
         font-size: ;
