--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 body {
     max-width: 1440px;
     font-family: 'Raleway', sans-serif;
-    margin: 0 auto;
+    margin: auto;
     padding: 0 20px;
     box-sizing: border-box;
 }
@@ -658,19 +658,6 @@ footer li {
     /*----------------------<header>-----------*/
 
 
-    .fa-location-dot {
-        border: 1px solid var(--grey);
-        border-radius: 15px 0px 0px 15px;
-        padding: 15px 13px;
-        font-size: 1em;
-        font-weight: 500;
-        background-color: #d4d5d6;
-        color: var(--white);
-    }
-
-    header i.fa-location-dot {
-        color: var(--dark);
-    }
 
     header input {
         width: 40vw;
@@ -742,7 +729,7 @@ footer li {
         padding-left: -10px;
         padding-right: 50px;
         padding-bottom: 10px;
-        border-radius: none;
+        border-radius: unset;
         background-color: var(--grey);
 
     }
@@ -750,8 +737,6 @@ footer li {
     .plus-populaires {
         border-radius: none;
         width: 100%;
-        background-color: #D9D9D9;
-
     }
 
     .plus-populaires h2 {
@@ -782,7 +767,10 @@ footer li {
         width: 100%;
         height: 147px;
         margin-left: -50px;
+    }
 
+    .carte-populaire img {
+        width: 150px;
     }
 
 
