--- a/css/style.css
+++ b/css/style.css
@@ -630,33 +630,79 @@ footer li {
         height: auto;
     }
 
+
     nav {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: auto;
+        text-align: center;
     }
 
     nav img {
-        margin-left: 10%;
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 20px;
+        position: relative;
+
+
+    }
+
+    nav ul {
+        display: inline-block;
+        margin: 0 auto;
+        padding: 0;
+        list-style: none;
+        white-space: nowrap;
+    }
+
+    nav li {
+        display: inline-block;
+        margin: 0 2px;
+        position: relative;
     }
 
     nav a {
-        padding: 0;
+        text-decoration: none;
+        padding: 0 40px 15px 40px;
     }
+
+
+    /* nav {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    nav img {
+        margin-left: 5%;
+        margin-bottom: 20px;
+    }
+
+    nav ul {
+        width: 100%;
+        margin-right: 50px;
+    }
+
+    nav li {
+        width: 30%;
+        text-align: center;
+        padding-right: 20px;
+    }*/
+
+
 
     nav a:hover,
     nav a:focus {
         border-top: none;
+        padding-bottom: 15px;
         border-bottom: 2px solid #0065FC;
+
     }
+
+
+    /*----------------------<header>-----------*/
 
     header .post {
         font-size: auto;
     }
-
-    /*----------------------<header>-----------*/
-
 
 
     header input {
@@ -774,7 +820,7 @@ footer li {
     }
 
 
-    /*----------------------------hebergements-----------------------------------*/
+    /*--------------------------hebergements-----------------------------------*/
 
     .hebergement {
         width: 100%;
