--- a/css/style.css
+++ b/css/style.css
@@ -803,7 +803,7 @@ footer li {
         flex-direction: column;
         margin-left: 20px;
         margin-right: 10px;
-        width: 95vw;
+        width: 88vw;
         /* margin-right: 30%;
         width: 85%;*/
     }
@@ -840,7 +840,7 @@ footer li {
     .hebergement h2 {
         font-size: 20px;
         font-weight: bolder;
-        margin: 30px 0 10px 10px;
+        margin: 30px 0 10px 20px;
     }
 
     .hebergement ul {
@@ -855,19 +855,19 @@ footer li {
 
 
     .carte-hebergement {
-        margin-left: 10px;
-        margin-bottom: 10vw;
-        width: 90vw;
-        height: 300px;
+        margin-bottom: 8vw;
+        width: 85vw;
+        height: 245px;
         box-shadow: 0 0 7px 0 var(--dark);
+        margin-left: 20px;
     }
 
     .carte-hebergement img {
         object-fit: cover;
         /*width: 97.5vw;
         */
-        /*height:90vw*/
-        height: 180px;
+
+        height: 130px;
     }
 
 
@@ -883,15 +883,16 @@ footer li {
 
     /*-------------------------activités-------------------*/
 
-
     aside .activités {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
-    .carte-activitéa {
+    /*.carte-activitéa {
         margin-right: 10px;
-    }
+    }*/
 
     .carte-activité {
         width: 90vw;
