--- a/css/style.css
+++ b/css/style.css
@@ -74,18 +74,6 @@ nav a:focus {
     color: var(--blue);
 }
 
-
-/*nav a:hover::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -42.5px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #0065FC;
-}*/
-
 nav a {
     text-decoration: none;
     color: var(--dark);
@@ -97,17 +85,6 @@ header {
     padding-top: 20px;
     flex-wrap: wrap;
 }
-
-
-/*form i {
-    border: 1px solid var(--grey);
-    border-radius: 15px 0px 0px 15px;
-    padding: 15px 13px;
-    font-size: 1em;
-    font-weight: 500;
-    background-color: #d4d5d6;
-    color: var(--white);
-}*/
 
 header i.fa-location-dot {
     color: var(--dark);
@@ -260,7 +237,7 @@ main ul li {
     flex-wrap: wrap;
     justify-content: space-around;
     margin-left: -30px;
-    margin-right: 30px;
+    margin-right: 15px;
 }
 
 .carte-hebergement {
@@ -270,7 +247,7 @@ main ul li {
     margin-bottom: 10px;
     border: 2px var(--white) solid;
     border-radius: 30px;
-    width: 18.4vw;
+    width: 19.4vw;
     height: auto;
     background-color: var(--white);
 }
@@ -298,10 +275,6 @@ main ul li {
     padding-bottom: 5px;
 }
 
-/*.hebergement ul {
-    display: flex;
-    flex-wrap: wrap;
-}*/
 
 .description-carte {
     color: var(--dark);
@@ -327,8 +300,6 @@ main ul li {
 .carte-hebergement:active {
     box-shadow: 0 10px 18px 0 var(--grey2);
 }
-
-
 
 .afficher {
     padding-top: 30px;
@@ -358,6 +329,8 @@ article {
     display: flex;
     justify-content: space-between;
     margin: 12px;
+    font-size: 22px;
+    padding-left: 15px;
 }
 
 
@@ -385,9 +358,13 @@ article {
     border: 1px var(--white);
     border-radius: 30px;
     width: 94%;
-    height: 167px;
+    height: 160px;
     background-color: var(--white);
     margin-right: 30px;
+}
+
+article ul {
+    padding-left: 15px;
 }
 
 .texte-populaire {
@@ -458,6 +435,13 @@ aside a {
 .carte-activité:hover {
     box-shadow: 0 4px 8px 6px var(--grey2);
     transition: 0.3s;
+}
+
+.titre {
+    box-sizing: content-box;
+    padding: 8px 0 8px 5px;
+    font-size: 12.5px;
+
 }
 
 /*-----------------------------------------<footer>-------------------------*/
@@ -560,7 +544,7 @@ footer li {
         display: flex;
         margin-top: 25px;
         width: 100%;
-        height: 300px;
+        height: 250px;
 
     }
 
