--- a/css/style.css
+++ b/css/style.css
@@ -204,8 +204,9 @@ header input:active {
 main {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
+    gap: 10px;
+    /*justify-content: space-between;*/
+    /*width: 100%;*/
 }
 
 main ul li {
@@ -218,13 +219,15 @@ main ul li {
     flex-wrap: wrap;
     border: 1px solid var(--white);
     border-radius: 30px;
-    width: 68%;
-    height: 682px;
+    width: 70%;
+    gap: 20px;
+    padding-left: 10px;
+    /*height: 682px;*/
 }
 
 .hebergement h2 {
-    width: 90%;
-    padding: 15px 0 10px 30px;
+    /* width: 90%;
+    padding: 15px 0 10px 30px;*/
 }
 
 .hebergement a {
@@ -235,10 +238,21 @@ main ul li {
 .hebergement ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-left: -30px;
-    margin-right: 15px;
+    /*justify-content: space-around;*/
+    gap: 20px;
+    padding: 0;
+    margin: 0;
+    /* margin-left: -30px;
+    margin-right: 15px;*/
 }
+
+.hebergement ul li {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: calc((100% - 50px) / 3)
+}
+
 
 .carte-hebergement {
     display: flex;
@@ -247,8 +261,9 @@ main ul li {
     margin-bottom: 10px;
     border: 2px var(--white) solid;
     border-radius: 30px;
-    width: 19.4vw;
-    height: auto;
+    /*width: 19.4vw;*/
+    /* width: calc((100% - 50px) / 3);*/
+    /*height: auto;*/
     background-color: var(--white);
 }
 
@@ -302,9 +317,9 @@ main ul li {
 }
 
 .afficher {
-    padding-top: 30px;
+    /*padding-top: 30px;
     padding-left: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 30px;*/
     color: var(--dark);
     font-weight: bold;
 }
@@ -314,10 +329,11 @@ article {
     background-color: var(--grey);
     display: flex;
     flex-direction: column;
-    width: 30%;
-    height: 680px;
+    width: calc(30% - 30px);
+    /*height: 680px;*/
     border: 1px solid var(--white);
     border-radius: 30px;
+
 }
 
 .fa-chart-line {
@@ -340,9 +356,9 @@ article {
     border: var(--white) 1px solid;
     border-radius: 30px 0 0 30px;
     padding: 2px;
-    width: 40%;
+    width: 30px;
     min-width: 30%;
-    height: auto;
+    /*height: auto;*/
 }
 
 .plus-populaires a {
@@ -627,8 +643,8 @@ footer li {
 @media screen and (max-width: 767px) {
 
     body {
-        width: auto;
-        height: auto;
+        /* width: auto;
+        height: auto;*/
         padding: 0 auto;
     }
 
