--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ header input:active {
 main {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 15px;
     /*justify-content: space-between;*/
     /*width: 100%;*/
 }
@@ -226,12 +226,12 @@ main ul li {
 }
 
 .hebergement h2 {
-    /* width: 90%;
-    padding: 15px 0 10px 30px;*/
+    /*width: 90%;*/
+    padding: 0 0 0 20px;
 }
 
 .hebergement a {
-    width: 33%;
+    /* width: 33%;*/
     text-decoration: none;
 }
 
@@ -240,7 +240,7 @@ main ul li {
     flex-wrap: wrap;
     /*justify-content: space-around;*/
     gap: 20px;
-    padding: 0;
+    padding: 0 20px 0 20px;
     margin: 0;
     /* margin-left: -30px;
     margin-right: 15px;*/
@@ -317,9 +317,7 @@ main ul li {
 }
 
 .afficher {
-    /*padding-top: 30px;
-    padding-left: 30px;
-    padding-bottom: 30px;*/
+    padding: 0 0 30px 20px;
     color: var(--dark);
     font-weight: bold;
 }
@@ -366,7 +364,7 @@ main ul li {
     border: var(--white) 1px solid;
     border-radius: 30px 0 0 30px;
     padding: 2px;
-    width: 30px;
+    width: 40px;
     min-width: 30%;
     /*height: auto;*/
 }
@@ -401,7 +399,7 @@ article ul {
     padding-bottom: 10px;
     padding-top: 0;
     font-size: 13px;
-    margin: 0;
+    margin: -10px 0 0 0;
 }
 
 .note-populaire {
@@ -409,7 +407,7 @@ article ul {
     align-items: flex-start;
     margin: 0;
     box-sizing: border-box;
-    padding-top: 15px;
+    padding-top: 10%;
 }
 
 
